<resources>
    <string name="app_name">GroupProject</string>

    <string name="header_login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>

    <string name="header_register">REGISTER</string>
    <string name="password_confirm">Retype Password</string>
    <string name="button_register">Register</string>
    <string name="already_have_account">Already have account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
